--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ documentation = "https://github.com/quickjs-zh/QuickJS"
 description = "Rust bindings to Fabrice Bellards QuickJS Javascript Engine"
 
 [dependencies]
+
+[build-dependencies]
+bindgen = "0.50"
